bitconj update